<resources>
    <string name="app_name">POSlaroid Cyberciruja</string>
    <string name="instructions">Llevate una foto impresa\nPOSlaroid</string>
    <string name="take_photo">SACAR FOTO</string>
    <string name="flash_turn_on">Sacando sin flash</string>
    <string name="flash_turn_off">Sacando con flash</string>
    <string name="switch_camera">Cambiar cámara</string>
    <string name="mirror_camera">Espejar cámara</string>
    <string name="printing">Imprimiendo…\npor favor espere</string>
    <string name="footerText">[L]&lt;b&gt;&lt;font size=\'tall\'&gt;CyberCirujas 2026&lt;/font&gt;&lt;/b&gt;\n[L]cybercirujas.rebelion.digital\n[L]\n[L]\n</string>
    <string name="apiUrl">http://192.168.1.4:5000/process</string>

    <!-- Funny messages during photo process -->
    <string name="photo_taken_can_move">¡Listo! Ya podés moverte</string>
    <string name="processing_cartoon">Transformando…\n¡Aguantá unos segundos!</string>
    <string name="sending_to_printer">Mandando a la impresora…\n¡No te vayas que ya sale!</string>
    <string name="preparing_photo">Preparando la foto…\n¡NO TE MUEVAS!</string>

    <!-- Style selection -->
    <string name="choose_style">¡Elegí un estilo!</string>
    <string name="style_normal">NORMAL</string>
    <string name="style_cartoon">CARTOON</string>
    <string name="style_anime">ANIME</string>
    <string name="style_sketch">BOCETO</string>
    <string name="style_oil_painting">ÓLEO</string>
    <string name="style_pixel_art">PIXEL ART</string>
</resources>