<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </androidx.camera.view.PreviewView>

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewFinder" />

    <TextView
        android:id="@+id/printing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/printing"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/viewFinder"
        app:layout_constraintEnd_toEndOf="@+id/viewFinder"
        app:layout_constraintStart_toStartOf="@+id/viewFinder"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gzalo.poslaroid.CircularCountdownView
        android:id="@+id/countdownView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/styleSelectionContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#CC000000"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerCrop"
            android:background="#333333" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_style"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <GridLayout
                android:id="@+id/styleGrid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:alignmentMode="alignMargins"
                android:useDefaultMargins="true" />

        </ScrollView>

    </LinearLayout>

    <EditText
        android:id="@+id/apiUrl"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:inputType="textUri"
        android:text="@string/apiUrl"
        android:hint="API URL"
        app:layout_constraintBottom_toTopOf="@+id/footerText"
        app:layout_constraintEnd_toStartOf="@+id/loadStylesButton"
        app:layout_constraintStart_toStartOf="@+id/viewFinder" />

    <Button
        android:id="@+id/loadStylesButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/load_styles_button"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/apiUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/apiUrl" />

    <EditText
        android:id="@+id/footerText"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/footerText"
        app:layout_constraintBottom_toTopOf="@+id/switchCamera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/viewFinder" />

    <Button
        android:id="@+id/flashToggleButton"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:text="@string/flash_turn_on"
        app:layout_constraintBottom_toTopOf="@+id/image_capture_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/switchCamera"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:text="@string/switch_camera"
        app:layout_constraintBottom_toTopOf="@+id/image_capture_button"
        app:layout_constraintStart_toEndOf="@+id/flashToggleButton" />

    <Button
        android:id="@+id/mirrorCamera"
        android:layout_width="126dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:text="@string/mirror_camera"
        app:layout_constraintBottom_toTopOf="@+id/image_capture_button"
        app:layout_constraintStart_toEndOf="@+id/switchCamera" />

    <Button
        android:id="@+id/image_capture_button"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_camera"
        android:elevation="2dp"
        android:gravity="center"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/take_photo"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
